# elmo-solo-guitar-driver-can

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: README.md  a.out  advance_torq_pdo.cpp  advance_vel_pdo.cpp  basicInverseKinematic  basic_configure.cpp  basic_inverse_kinematic.cpp  basic_inverse_kinematic_torque.cpp  basic_pdo.cpp  basic_ping.cpp  basic_speed_control.cpp  basic_torque_control.cpp  inverseKinematic  make.sh  pdo  torqInversKinematic  torqPDO  up_iface  up_iface.cpp  velPDO
src/: elmo_can.cpp  elmo_can.h  elmo_err.h  elmo_reg.h
